# NovoMBnoWpp

./: .env.example  .gitignore  Dockerfile  QUICK-START-TESTE.md  README.md  TESTE-LOCAL-INSTRUCOES.md  docker-compose.yml  pyproject.toml
Search and Development/brainstorming/: brainstorming-session-2026-02-09.md
Search and Development/implementation-artifacts/: 0-1-prep-sprint-debitos-tecnicos-validacao-e2e.md  1-1-setup-projeto-django-estrutura-base.md  1-3-identificacao-usuario-carregamento-contexto.md  1-4-llm-provider-checkpointer-orquestracao-base.md  2-2-web-search-busca-web-citacoes-bloqueio-concorrentes.md  2-4-bulas-de-medicamentos.md  2-5-calculadoras-medicas.md  4-1-rate-limiting-dual-sliding-window-token-bucket.md  5-1-retry-automatico-circuit-breaker.md  7-2-traces-end-to-end-langfuse-structlog.md  7-3-metricas-qualidade-alertas.md  8-1-config-service-aprimorado-hot-reload-redis-audit-trail.md  epic-2-retro-2026-03-10.md  epic-3-5-retro-2026-03-12.md  epic-4-retro-2026-03-08.md  epic-8-retro-2026-03-15.md  guia-setup-whatsapp-business-api.md  otimizacoes-tempo-cache-redis.md  resumo-fases-1-2-3-tool-calling.md  sprint-status.yaml
Search and Development/planning-artifacts/: architecture.md  decisao-tecnica-langgraph-vs-claude-sdk.md  epics.md  prd.md
config/: asgi.py  urls.py  wsgi.py
scripts/: check_overmocking.py  debug_tools.py  monitor_test.sh  profile_timing.py  test_cache_performance.py  test_e2e_whatsapp.py  test_pipeline.py  test_tool_calling.py
tests/: test_cache_manager.py  test_errors.py  test_graph.py  test_identify_user.py  test_load_context.py  test_middleware.py  test_sanitization.py  test_state.py  test_webhook.py
workflows/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
(+197 files in other folders)
